<resources>
    <string name="app_name">DciKitDemo</string>
    <string name="please_login_hms_first">Sign in to your HUAWEI ID first.</string>
    <string name="hms_login_success">Sign-in successful.</string>
    <string name="hms_account_login">Sign in to HUAWEI ID</string>
    <string name="current_not_register_dci_account">Register as a DCI user.</string>
    <string name="please_login_hms_again">Sign-in expired. Please sign in again.</string>
    <string name="register_dci_account">Register as DCI user</string>

    <string name="close_dci_account">Deregister</string>
    <string name="close_dci_account_success">Deregistration successful.</string>
    <string name="close_dci_account_failed">Deregistration failed.</string>

    <string name="get_dci_account">DCI Kit obtains user information</string>
    <string name="please_get_dci_account">DCI Kit needs to obtain user information first.</string>
    <string name="succeeded_get_dci_account">Operation successful.</string>
    <string name="deregister_dci_account_whether">Are you sure you want to deregister?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="please_select_picture_first">Select a photographic work.</string>
    <string name="select_picture">Select photographic work</string>

    <string name="about_registration">Register copyright</string>
    <string name="dci_registration">Register</string>
    <string name="registration_processing">Registering…</string>
    <string name="registration_failed">Registration failed</string>
    <string name="uploading_registered_work_succeeded">Registration application sent successfully.</string>
    <string name="querying_registration_information">View registration information</string>
    <string name="registration_success">DCI code issued.</string>
    <string name="revoke_dci_copyright">Revoke copyright registration</string>
    <string name="add_dci_watermark">Add DCI icon for registered photographic work</string>

    <string name="please_registration_work_first">Register your work first.</string>
    <string name="please_query_dci_registration_result">Registration in progress or failed.</string>

    <string name="please_revoke_dci_info_first">Revoke copyright registration for the work first.</string>
    <string name="apply_revoke_dci_success">Request to revoke copyright registration sent successfully.</string>
    <string name="query_revoke_dci_info">View revoking result</string>
    <string name="revoke_dci_registration_success">Copyright registration revoked successfully.</string>
    <string name="revoke_dci_registration_processing">Request to revoke copyright registration is being processed.</string>
    <string name="revoke_dci_registration_failed">Failed to revoke copyright registration for the work</string>
</resources>
