<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <Button
            android:id="@+id/btn_select_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/select_picture"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_dci_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/dci_registration"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_query_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/querying_registration_information"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_revoke_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/revoke_dci_copyright"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_query_revoke_dci_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/query_revoke_dci_info"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_add_dci_watermark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add_dci_watermark"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_dci_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
